[CAP-695] Card search should return available balance
Approved-by: Buduianu George