@@ -4,6 +4,7 @@ import com.blazebit.persistence.CriteriaBuilder;
 import com.blazebit.persistence.CriteriaBuilderFactory;
 import com.blazebit.persistence.JoinType;
 import com.clearspend.capital.common.data.model.Amount;
+import com.clearspend.capital.common.typedid.data.AccountId;
 import com.clearspend.capital.common.typedid.data.CardId;
 import com.clearspend.capital.common.typedid.data.TypedId;
 import com.clearspend.capital.common.typedid.data.UserId;
@@ -15,14 +16,19 @@ import com.clearspend.capital.data.model.Card;
 import com.clearspend.capital.data.model.Hold;
 import com.clearspend.capital.data.model.TransactionLimit;
 import com.clearspend.capital.data.model.User;
+import com.clearspend.capital.data.model.enums.Currency;
 import com.clearspend.capital.data.model.enums.HoldStatus;
 import com.clearspend.capital.data.repository.CardRepositoryCustom;
 import com.clearspend.capital.service.BeanUtils;
 import com.clearspend.capital.service.CardFilterCriteria;
 import com.clearspend.capital.service.type.CurrentUser;
 import java.math.BigDecimal;
+import java.time.Clock;
+import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.Tuple;
@@ -42,13 +48,12 @@ public class CardRepositoryImpl implements CardRepositoryCustom {
   private final EntityManager entityManager;
   private final CriteriaBuilderFactory criteriaBuilderFactory;
 
-  public record CardDetailsWithHoldRecord(
+  public record CardDetailsWithUserRecord(
       Card card,
       Allocation allocation,
       Account account,
       User user,
-      TransactionLimit transactionLimit,
-      BigDecimal holdsSum) {}
+      TransactionLimit transactionLimit) {}
 
   @Override
   public Page<FilteredCardRecord> filter(CardFilterCriteria criteria) {
@@ -75,22 +80,22 @@ public class CardRepositoryImpl implements CardRepositoryCustom {
           .endOr();
     }
 
-    Page<CardDetailsWithHoldRecord> results =
+    Page<CardDetailsWithUserRecord> results =
         BlazePersistenceUtils.queryPagedTuples(
-            CardDetailsWithHoldRecord.class, builder, criteria.getPageToken(), false);
+            CardDetailsWithUserRecord.class, builder, criteria.getPageToken(), false);
 
-    return new PageImpl<>(
-        results.stream()
-            .map(
-                r ->
-                    new FilteredCardRecord(
-                        r.card,
-                        r.allocation,
-                        calcualteAvailableBalance(r.account, r.holdsSum),
-                        r.user))
-            .collect(Collectors.toList()),
-        results.getPageable(),
-        results.getTotalElements());
+    PageImpl<FilteredCardRecord> result =
+        new PageImpl<>(
+            results.stream()
+                .map(r -> new FilteredCardRecord(r.card, r.allocation, r.account, r.user))
+                .collect(Collectors.toList()),
+            results.getPageable(),
+            results.getTotalElements());
+
+    calculateAvailableBalance(
+        result.getContent().stream().map(FilteredCardRecord::account).distinct().toList());
+
+    return result;
   }
 
   private List<CardDetailsRecord> findDetails(
@@ -103,16 +108,14 @@ public class CardRepositoryImpl implements CardRepositoryCustom {
     BeanUtils.setNotNull(cardId, id -> builder.where("card.id").eq(id));
     BeanUtils.setNotNull(userId, id -> builder.where("card.userId").eq(id));
 
-    return BlazePersistenceUtils.queryTuples(CardDetailsWithHoldRecord.class, builder, false)
-        .stream()
-        .map(
-            r ->
-                new CardDetailsRecord(
-                    r.card,
-                    r.allocation,
-                    calcualteAvailableBalance(r.account, r.holdsSum),
-                    r.transactionLimit))
-        .collect(Collectors.toList());
+    List<CardDetailsRecord> result =
+        BlazePersistenceUtils.queryTuples(CardDetailsWithUserRecord.class, builder, false).stream()
+            .map(r -> new CardDetailsRecord(r.card, r.allocation, r.account, r.transactionLimit))
+            .collect(Collectors.toList());
+
+    calculateAvailableBalance(result.stream().map(CardDetailsRecord::account).distinct().toList());
+
+    return result;
   }
 
   @Override
@@ -151,27 +154,13 @@ public class CardRepositoryImpl implements CardRepositoryCustom {
 
     BlazePersistenceUtils.joinOnPrimaryKey(
         builder, Card.class, TransactionLimit.class, "ownerId", JoinType.INNER);
-    BlazePersistenceUtils.joinOnPrimaryKey(
-        builder, Account.class, Hold.class, "accountId", JoinType.LEFT);
-
-    builder
-        // hold expirationDate
-        .whereOr()
-        .where("expirationDate")
-        .gtExpression("CURRENT_TIMESTAMP")
-        .where("expirationDate")
-        .isNull()
-        .endOr();
 
     builder
         .select("card")
         .select("allocation")
         .select("account")
         .select("user")
-        .select("transactionLimit")
-        .select(
-            "SUM(CASE hold.status WHEN '%s' THEN hold.amount.amount ELSE 0 END)"
-                .formatted(HoldStatus.PLACED));
+        .select("transactionLimit");
 
     return builder;
   }
@@ -184,13 +173,35 @@ public class CardRepositoryImpl implements CardRepositoryCustom {
     }
   }
 
-  private Account calcualteAvailableBalance(Account account, BigDecimal holdsSum) {
-    Amount ledgerBalance = account.getLedgerBalance();
-    account.setAvailableBalance(
-        ledgerBalance.add(
-            new Amount(
-                ledgerBalance.getCurrency(), holdsSum != null ? holdsSum : BigDecimal.ZERO)));
+  private void calculateAvailableBalance(List<Account> accounts) {
+    if (!CollectionUtils.isEmpty(accounts)) {
+      Map<TypedId<AccountId>, Account> accountMap =
+          accounts.stream().collect(Collectors.toMap(Account::getId, Function.identity()));
 
-    return account;
+      CriteriaBuilder<Tuple> builder =
+          criteriaBuilderFactory.create(entityManager, Tuple.class).from(Hold.class, "hold");
+
+      builder
+          .where("hold.accountId")
+          .in(accounts.stream().map(Account::getId).toList())
+          .where("hold.expirationDate")
+          .gt(OffsetDateTime.now(Clock.systemUTC()))
+          .where("hold.status")
+          .eqLiteral(HoldStatus.PLACED.name());
+
+      builder.select("hold.accountId").select("SUM(hold.amount.amount)").groupBy("hold.accountId");
+
+      builder
+          .getResultList()
+          .forEach(
+              tuple -> {
+                TypedId<AccountId> accountId = tuple.get(0, TypedId.class);
+                Account account = accountMap.get(accountId);
+                account.setAvailableBalance(
+                    account
+                        .getLedgerBalance()
+                        .add(Amount.of(Currency.USD, tuple.get(1, BigDecimal.class))));
+              });
+    }
   }
 }
